Bug 120657 - Pie chart saved as DOC doesn't preview in MSO
Summary: Pie chart saved as DOC doesn't preview in MSO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, filter:doc, regression
Depends on:
Blocks:
 
Reported: 2018-10-17 11:44 UTC by Timur
Modified: 2018-11-07 14:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample as opened in MSO (21.37 KB, image/png)
2018-10-17 11:44 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2018-10-17 11:44:34 UTC
Created attachment 145777 [details]
Sample as opened in MSO

1. open ODT attachment 145409 [details] with pie chart from Bug 120341
2. save as DOC and close
3. open in MSO

Doesn't preview anymore in 6.2+. Worked in 6.1, preview was fine although this was an object.
Not sure if this is regression or bug should be about proper chart saving in doc or both separately.
Comment 2 Xisco Faulí 2018-10-17 15:17:31 UTC
Most likely introduced by https://cgit.freedesktop.org/libreoffice/core/commit/?id=a84e3df74eecc8778e3d5be5dd80ad4ddb511edf

Adding Noel Grandin to the loop...
Comment 3 Xisco Faulí 2018-10-29 18:59:24 UTC
Still reproducible in

Version: 6.2.0.0.alpha1+
Build ID: 19a0698079fbba36646a2d06eaec3a7fde60b2f5
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 4 Commit Notification 2018-11-07 14:07:58 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/dbe94dd3b64e74f661ea7193d8e06ac91f1dd7b0%5E%21

tdf#120657 Pie chart saved as DOC doesn't preview in MSO

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.