tdf#120657 Pie chart saved as DOC doesn't preview in MSO

regression from

    commit 9ec8bf8f22fe74884185492ef2576ce79b41e4f1
    add SvStream::TellEnd

the problem is that in this stack trace

    sot/source/sdstor/stgelem.hxx:130
    sot/source/sdstor/stgdir.cxx:300
    sot/source/sdstor/stg.cxx:245
    sot/source/sdstor/storage.cxx:187
    tools/source/stream/stream.cxx:1908
    sw/source/filter/ww8/ww8scan.cxx:6267

The StgEntry returns a size of 0. If we do something else to the
SotStorageStream first, then it materialises a temporary stream, and
that stream returns a valid size.

Also implement suggestions from mike kaganski:

IMO, it would be more robust to implement this new function as virtual
(instead of the remainingSize()), and reimplement the latter as
non-virtual one using the new one and doing the necessary correction.

Change-Id: Id1462d918570a684ec67099c30181436a27d3c6a